@@ -10,6 +10,7 @@ Did:
     -Disable ktlint naming rule that doesn't match Composable naming style
     -Clear remaining ktlint errors
     -Generate default detekt config
+    -Suppress MagicNumber warning in file that localises ordinal numbers
 
 29-04-2024
 Streak: 1
